<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RefineFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="History"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >

<!--        selection of availability-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/categoryTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_your_availability">

            <AutoCompleteTextView
                android:id="@+id/availabilityAct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        status layouts-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_you_status"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            />
        <EditText
            android:id="@+id/etStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_fields_bkg"
            android:inputType="textMultiLine"
            android:text="@string/tt"
            style="@style/EditTextWithOutline" />
        <TextView
            android:id="@+id/tvWordCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_250"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:textColor="@color/primary"
            />

<!--        selecting distance layouts-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_hyper_local_distance"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginTop="@dimen/_15sdp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <SeekBar
                android:id="@+id/distanceSeekBar"
                android:layout_width="match_parent"
                android:layout_weight="0.2"
                android:layout_gravity="bottom"
                android:thumbTint="@color/primary"
                android:progressTint="@color/primary"
                android:layout_height="wrap_content"
                android:max="100" />
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/filterCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/primary"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center"
               >
                <TextView
                    android:id="@+id/distanceCount"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:text="@string/_0"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_km"
                android:textSize="@dimen/_10ssp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/primary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100_km"
                android:layout_marginStart="@dimen/_160sdp"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/primary"
                />
        </LinearLayout>

<!--        select purpose layout-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_purpose"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/etCoffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/coffee"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
            <TextView
                android:id="@+id/etDating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/dating"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
            <TextView
                android:id="@+id/etDinning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/dinning"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <TextView
                android:id="@+id/etBussiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/businesss"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp"
               />
            <TextView
                android:id="@+id/etHobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/hobbies"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
            <TextView
                android:id="@+id/etFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/friend"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            >
            <TextView
                android:id="@+id/etMatrimony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/matrimony"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
            <TextView
                android:id="@+id/etMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/text_fields_bkg"
                android:text="@string/movies"
                android:layout_marginStart="@dimen/_8sdp"
                android:textColor="@color/primary"
                android:padding="@dimen/_10sdp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveAndExplore"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="match_parent"
            android:text="@string/save_and_explore"
            android:layout_marginTop="@dimen/_15sdp"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personDetailLL" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>