<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MerchantFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hockey"
        android:textSize="@dimen/_23ssp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/searchLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_2sdp"
        >
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/searchCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            app:cardCornerRadius="5dp"
            android:layout_weight="0.1"
            app:cardUseCompatPadding="true"
            app:strokeColor="@color/mediumLightBLue"
            app:strokeWidth="2dp">
            <EditText
                android:id="@+id/searchEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:hint="@string/searchhh"
                android:padding="10dp" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/filterCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_weight="0.9"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"
            app:strokeWidth="2dp">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/setting"
                />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchLL"
        >
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:src="@drawable/undraw_emails_re_cqen"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_explore_list_is_empty"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sorry we could not find any user near you.\n        Try increasing your search radius"
            android:textColor="@color/lightBlue"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInvite"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="match_parent"
            android:text="@string/increase_radius"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:cornerRadius="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
             />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:tint="@color/white"
        android:visibility="gone"
        app:tint = "@color/white"
        android:layout_margin="@dimen/_10sdp"
        android:theme="@style/plusIconColor"
        android:src="@drawable/ic_baseline_add_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>